# nos2ync

./: Cargo.toml  README.md  config.ron  config_example.toml
src/: main.rs
